feat: create dialog

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <title id="title">Wedding Profile Book</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="dialog.css">
+  <link rel="stylesheet" href="site-designs.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -261,6 +263,7 @@
     </div>
   </div>
   <script src="script.js"></script>
+  <script src="dialog.js"></script>
 </body>
 
 </html>
